--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">News Reader</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_changeview">Change View</string>
     <string name="loading">Loading...</string>
     <string name="error_loading_data">Error loading data</string>
     <!--String for categories -->
